# 0g-hack-guard

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  FINISH.md  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml  render.yaml
cache/: solidity-files-cache.json
content/: 0guard_current_update_x_thread.json  0guard_postsubmit_update_x_thread.json  hack_guard_thread.json  hackquest_x_post.json  linkedin_frontier_lab_update.md  linkedin_launch_post.md  linkedin_postsubmit_intelligence_update.md  linkedin_telegram_miniapp_update.md  project_x_account_kit.json  social_execution_status_2026-05-16.md  substack_0guard_launch_draft.md  telegram_miniapp_x_thread.json  x_main_account_hackathon_update_2026-05-16.json  x_main_cleanup_manifest.policy.json  x_media_cleanup_manifest.template.json  x_zeroguard_account_update_2026-05-16.json
contracts/: PolicyReceiptAnchor.json  PolicyReceiptAnchorV2.sol
data/: april_2026_incidents.json  incident_provenance_cache.json  osint_sources.json
docs/: 0G_PRIVATE_COMPUTE_AND_HOT_WALLET_RUNBOOK.md  ARBITRUM_OPEN_HOUSE_BUILDATHON_PLAN.md  CRITICAL_ASSESSMENT.md  CROSS_CHAIN_FABRIC.md  DATA_FLOWS.md  DEMO_VIDEO_SCRIPT.md  DEVELOPER_KIT.md  ECOSYSTEM_ROADMAP.md  FRONTIER_EXPERIMENTS.md  IKA_DWALLET_INTEGRATION.md  INTELLIGENCE_STREAMS.md  LEGAL_AND_ASSET_POLICY.md  LOCAL_INFERENCE_X402_BACKFILL.md  MARKET_POSITIONING.md  METAMASK_1SHOT_COOKOFF_PLAN.md  NATIVE_PREFLIGHT_STRATEGY.md  NEXT_HACKATHON_ROADMAP.md  PEER_PROTECTION_AND_PI_MESH.md  PROJECT_BRIEF.md  REPUTATION_ADAPTER.md  index.html  (+3 more)
(+136 files in other folders)
