[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "0guard"
version = "0.1.0"
description = "0G-native agent guard with signature & behavioral detection for crypto hacks"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Sapphire Security"},
]
keywords = ["0g", "blockchain", "security", "defi", "agent", "hack-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "requests>=2.31",
    "web3>=7.0",
    "eth-utils>=5.0",
    "tweepy>=4.14",
]

[project.optional-dependencies]
dev = [
    "edge-tts>=7.0",
    "Pillow>=10.0",
    "playwright>=1.50",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
0guard = "guard0.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
guard0 = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
line-length = 100
